# Shelf-Book-Reader

./: .env.asc.local.example  .gitignore  CHANGELOG.md  IOSUI_design.md  PDF阅读器产品计划书_v1.0.md  PROJECT.md  README.md  fixedbug.md  implementation_plan.md  index.html  package-lock.json  package.json  progress.md  tsconfig.json  vite.config.ts  全平台开发文档.md  技术设计文档.docx  技术设计文档.md
.claude/: launch.json
.github/workflows/: ci.yml  release-desktop.yml  release-ios.yml
.xcode-derived-data/: info.plist
.xcode-derived-data/ModuleCache.noindex/: Session.modulevalidation
.xcode-derived-data/SDKStatCaches.noindex/: iphoneos26.5-23F81a-32daed1954a7d5dd0789fcaf2a9bb78b.sdkstatcache
docs/: IOSUI_验收标准.md  真机安装测试步骤.md  跨平台审计清单.md
fastlane/: Appfile  Fastfile  README.md  report.xml
src/: App.tsx  api.ts  dict.ts  main.tsx  pdf.ts  platform.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  sync.rs  sync_engine.rs  sync_runtime.rs  sync_supabase.rs  token_store.rs
src/components/: AccountPanel.tsx  BookCover.tsx  Library.tsx  Reader.tsx  WordPopup.tsx
src/components/reader/: ReaderDesktopShell.tsx  ReaderIosShell.tsx  ReaderPageStage.tsx  ReaderThumbnailStrip.tsx  usePdfReaderController.ts
supabase/: config.toml
supabase/functions/delete-account/: index.ts
supabase/migrations/: 20260712000001_init_sync_schema.sql
supabase/tests/: rls_isolation_test.sql
tools/: build-dict.mjs  gen-scan-pdf.py  release-ios-testflight.sh  seed-ios-test-book.sh
(+1 files in other folders)
